<resources>
    <string name="app_name">Органайзер учителя</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="delete_db">delete_DB</string>
    <string name="title_activity_navigetion_drawer">NavigetionDrawer</string>

    <string name="subjects">Предметы</string>
    <string name="groups">Группы</string>
    <string name="groups_learning">Группы в которых читают этот предмет </string>
    <string name="group">Группа</string>

    <string name="mail">Почта</string>
    <string name="new_subject"> Названия предмета </string>
    <string name="new_theme"> Название теми </string>
    <string name="number_subject"> Номер предмета </string>
    <string name="add_subject"> Добавить предмет </string>
    <string name="add_theme"> Добавить тему </string>


    <string name="group_not_repeat_error_message">Такая группа не существует!</string>
    <string name="students">Студенты</string>
    <string name="teachers">Учетеля</string>

    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="middle_name">Отчество</string>

    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="phone_number">Номер телефона</string>
    <string name="not_empty_warning">Поле не заполнено, заполните пожалуйста.</string>
    <string name="login_not_empty_warning">Введите Логин пожалуйста.</string>
    <string name="password_not_empty_warning">Введите пароль пожалуйста.</string>
    <string name="passwords_are_different">Пароли разные, проверьте введенные пароли.</string>
    <string name="login_are_different">Логин такой уже существует, введенные другой.</string>

    <string name="passwords_login_incorrect">Проверте логин или пароль.</string>
    <string name="add_group">Добавить групу </string>
    <string name="how"> Кто будет отвечать </string>
    <string name="name_group">Название групи </string>
    <string name="name_kuratora">Куратор Ф.И.О. </string>
    <string name="number_kuratora">Номер телефона Куратора</string>

    <string name="password_repeat">Повторите Пароль</string>
    <string name="sing">Войти</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="teacher_title">Учитель</string>
    <string name="title_activity_student_registration">Регистрация Студента</string>

    <string name="add_student">Добавить Студента</string>
    <string name="add_teacher">Добавить Учителя</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_group_registration">Реистрация группы</string>
    <string name="title_activity_subject_registration">Реистрация предмета</string>
    <string name="title_activity_table">Таблица оценок</string>
    <string name="title_activity_subjects_teacher"> </string>
    <string name="title_activity_theme_registration">Реистрация темы</string>
    <string name="title_activity_student_information">StudentInformationActivity</string>

    <!-- Student information -->
    <string name="email_student">Почта:</string>
    <string name="phone_student">Номер телефона:</string>
    <string name="name_student">Имя:</string>
    <string name="groups_student">Група:</string>

    <string name="delete">Удалить</string>
    <string name="okey">Оставить</string>

    <string name="delete_student">Удалить студента ? </string>
    <string name="delete_group">Удалить группу ? </string>
    <string name="delete_subject">Удалить предмет ? </string>
    <string name="title_activity_group_information">GroupInformationActivity</string>

    <string name="name_kuratora_information">Имя куривныка:</string>
    <string name="phone_number_kuratora">Номер керивныка:</string>
    <string name="number_student_group">Количество студентов в группе:</string>
    <string name="name_group_information">Группе:</string>
    <string name="other_information">Дополнительная Информация</string>

<string name="propuski">Количество прогулов:</string>
</resources>
