<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/surname"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/surname"
        android:inputType="textCapSentences|textAutoCorrect"
        android:password="false" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_name_student"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:met_floatingLabel="highlight"
        android:textColor="@color/color_primary"
        android:layout_below="@+id/surname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textCapSentences|textAutoCorrect" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_middle_name_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/middle_name"
        android:textColor="@color/color_primary"
        android:layout_below="@+id/new_name_student"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textCapSentences|textAutoCorrect" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:inputType="textPassword"
        android:textColor="@color/color_primary"
        android:layout_below="@+id/new_middle_name_student"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/color_primary"
        android:inputType="textPassword"
        android:layout_below="@+id/login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        android:textColor="@color/color_primary"
        android:layout_below="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <com.gc.materialdesign.views.ButtonFlat
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:id="@+id/add_teacher"
        android:text="@string/add_teacher"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
