<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dima.teacherorganizer.RegistrationActivity.StudentRegistration">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_surname_student"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/surname"
        android:inputType="textCapSentences|textAutoCorrect"
        android:password="false" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_name_student"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_teacher"
        app:met_floatingLabel="highlight"
        android:textColor="@color/color_primary"
        android:layout_below="@+id/new_surname_student"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textCapSentences|textAutoCorrect" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_middle_name_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/middle_name"
        android:textColor="@color/color_primary"
        android:layout_below="@+id/new_name_student"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textCapSentences|textAutoCorrect" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_phone_number_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textColor="@color/color_primary"
        android:layout_below="@+id/new_middle_name_student"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/student_group"
        android:hint="@string/group"
        android:layout_below="@+id/new_phone_number_student"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_student_mail"
        android:inputType="textEmailAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/mail"
        android:layout_below="@+id/student_group" />

    <com.gc.materialdesign.views.ButtonFlat
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:id="@+id/add_student"
        android:text="@string/add_student"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
