<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dima.teacherorganizer.Activity.GroupRegistration">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_name_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_group"
        android:inputType="textCapSentences|textAutoCorrect"
        android:textColor="@color/color_primary"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/name_kuratora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_kuratora"
        android:layout_below="@+id/new_name_group"
        android:inputType="textCapSentences|textAutoCorrect"
        android:textColor="@color/color_primary"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/number_kuratora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_kuratora"
        android:layout_below="@+id/name_kuratora"
        android:inputType="phone|number"
        android:textColor="@color/color_primary"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.gc.materialdesign.views.ButtonFlat
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:id="@+id/add_group"
        android:text="@string/add_group"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
