<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dima.teacherorganizer.RegistrationActivity.LoginActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textColorHint="@color/color_divider"
        android:textColor="@color/color_primary"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:text="admin" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password_login_activity"
        android:textColorHint="@color/color_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/color_primary"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/login_registration"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="admin" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/sing"
        android:id="@+id/sing"
        android:textColor="@color/color_primary"
        android:alpha="0.25"
        android:layout_above="@+id/registration"
        android:layout_centerHorizontal="true"

        android:theme="@style/ButtonFloatStyle"
        android:layout_marginBottom="120dp" />

    <Button

        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:text="@string/registration"
        android:textColor="@color/color_primary"
        android:id="@+id/registration"
        android:gravity="center"
        android:theme="@style/ButtonFloatStyle"
        android:singleLine="false"
        android:alpha="0.25"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
