<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="com.example.dima.teacherorganizer.Activity.SubjectRegistration">-->

<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    xmlns:android="http://schemas.android.com/apk/res/android">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_subject"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/new_subject" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/number_subject"
            android:hint="@string/number_subject"
            android:layout_below="@+id/new_subject"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <!--шифер предмета-->

        <ListView
            android:layout_height="544dp"
            android:layout_width="match_parent"
            android:id="@+id/set_list_group_subjects"
            android:layout_weight="1"
            android:layout_below="@+id/number_subject"
            android:layout_above="@+id/add_subject"
             />

    <com.gc.materialdesign.views.ButtonFlat
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:id="@+id/add_subject"
        android:text="@string/add_subject"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
<!--</ScrollView>-->


