<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dima.teacherorganizer.InformatoinActivity.StudentInformationActivity">

    <TextView
        android:text="@string/email_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="@dimen/size_text_grade"
        android:textColor="@color/color_primary_dark"
        android:layout_margin="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/information_student_email"
        android:textSize="@dimen/size_text_grade"
        android:layout_alignBottom="@+id/textView"
        android:textColor="@color/color_primary_dark"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:textStyle="bold|normal|italic" />

    <TextView
        android:text="@string/name_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_grade"
        android:textColor="@color/color_primary_dark"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"
        android:layout_margin="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_primary_dark"
        android:id="@+id/information_student_name"

        android:textSize="@dimen/size_text_grade"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:textStyle="bold|normal|italic" />

    <TextView
        android:text="@string/groups_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_grade"
        android:textColor="@color/color_primary_dark"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_primary_dark"
        android:id="@+id/information_student_group"

        android:textSize="@dimen/size_text_grade"

        android:textStyle="bold|normal|italic"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />
    <TextView
        android:text="@string/phone_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_grade"
        android:textColor="@color/color_primary_dark"
        android:id="@+id/textView4"
        android:layout_margin="15dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_primary_dark"
        android:id="@+id/information_student_phone"
        android:textSize="@dimen/size_text_grade"
        android:textStyle="bold|normal|italic"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_grade"
        android:textColor="@color/color_primary_dark"
        android:id="@+id/textView5"
        android:text="@string/propuski"
        android:layout_margin="15dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_primary_dark"
        android:id="@+id/progulu"
        android:textSize="@dimen/size_text_grade"
        android:textStyle="bold|normal|italic"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"/>
</RelativeLayout>
