<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dima.teacherorganizer.InformatoinActivity.GroupInformationActivity">


    <TextView
        android:text="@string/name_kuratora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="@dimen/size_text_grade"
        android:textColor="@color/color_primary_dark"
        android:layout_margin="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_kuratora_information"
        android:textSize="@dimen/size_text_grade"
        android:layout_alignBottom="@+id/textView"
        android:textColor="@color/color_primary_dark"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:textStyle="bold|normal|italic" />

    <TextView
        android:text="@string/phone_number_kuratora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_grade"
        android:textColor="@color/color_primary_dark"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"
        android:layout_margin="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_primary_dark"
        android:id="@+id/phone_number_kurator"

        android:textSize="@dimen/size_text_grade"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:textStyle="bold|normal|italic" />

    <TextView
        android:text="@string/number_student_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_grade"
        android:textColor="@color/color_primary_dark"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_primary_dark"
        android:id="@+id/number_student_information"

        android:textSize="@dimen/size_text_grade"

        android:textStyle="bold|normal|italic"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />
    <TextView
        android:text="@string/name_group_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_grade"
        android:textColor="@color/color_primary_dark"
        android:id="@+id/textView4"
        android:layout_margin="15dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_primary_dark"
        android:id="@+id/name_group_information"
        android:textSize="@dimen/size_text_grade"
        android:textStyle="bold|normal|italic"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"/>
</RelativeLayout>
